--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
     <string name="password">Password</string>
     <string name="sign_in">Sign In</string>
     <string name="intro_string">by the PageWise Team</string>
+    <string name="logo_alt">logo image</string>
+    <string name="user_icon">user icon</string>
 </resources>
