--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,10 @@
 
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
+
+    <string-array name="StudentActions">
+        <item>Assignments</item>
+        <item>Classes</item>
+        <item>Reading Stats</item>
+    </string-array>
 </resources>
