--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,9 +17,11 @@
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
 
+    <!--for student view spinner-->
     <string-array name="StudentActions">
-        <item>Assignments</item>
+        <item></item>
         <item>Classes</item>
-        <item>Reading Stats</item>
+        <item>Assignments</item>
+        <item>Reading View</item>
     </string-array>
 </resources>
