odds and ends. readd assignment gen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,5 +23,6 @@
         <item>Classes</item>
         <item>Assignments</item>
         <item>Reading View</item>
+        <item>Create Assignment</item>
     </string-array>
 </resources>
