"Create Classes and a lil cleanup"

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,5 +24,6 @@
         <item>Assignments</item>
         <item>Reading View</item>
         <item>Create Assignment</item>
+        <item>Create Class</item>
     </string-array>
 </resources>
