broken but started adding in schedule

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,5 +25,6 @@
         <item>Reading View</item>
         <item>Create Assignment</item>
         <item>Create Class</item>
+        <item>Create Schedule</item>
     </string-array>
 </resources>
